--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "antd": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.71.6",
-    "react-snap-carousel": "^0.3.1"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
