--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"start": "react-scripts start",
+		"predeploy": "npm run build",
+		"deploy": "gh -pages -d build",
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
 	},
 	"dependencies": {
 		"@emailjs/browser": "^3.11.0",
@@ -15,7 +20,7 @@
 		"leaflet": "^1.9.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+		"react-icons": "^4.8.0",
 		"react-leaflet": "^4.2.1",
 		"react-native": "^0.71.6",
 		"react-router-dom": "^6.10.0",
@@ -28,6 +33,7 @@
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^3.1.0",
 		"autoprefixer": "^10.4.14",
+		"gh-pages": "^5.0.0",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.3.1",
 		"typescript": "^4.9.3",
