--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "http://sutdmarketwatch.github.io/website/", 
 	"name": "sutd-marketwatch-website",
 	"private": true,
 	"version": "0.0.0",
@@ -6,7 +7,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"predeploy": "npm run build",
-		"deploy": "gh -pages -d build",
+		"deploy": "gh-pages -d build",
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
