--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
 		"dev": "vite",
-		"build": "tsc && vite build",
+		"build": "vite build",
 		"preview": "vite preview",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
