--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"leaflet": "^1.9.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.8.0",
 		"react-leaflet": "^4.2.1",
 		"react-native": "^0.71.6",
 		"react-router-dom": "^6.10.0",
